--- a/viagorb/pom.xml
+++ b/viagorb/pom.xml
@@ -59,14 +59,16 @@
   	</dependency>
 
   	<dependency>
-  		<groupId>mysql-connector-java</groupId>
-  		<artifactId>mysql-connector-java</artifactId>
-  		<version>5.0.8</version>
-  	</dependency>
-  	<dependency>
   		<groupId>javax.servlet</groupId>
   		<artifactId>jstl</artifactId>
   		<version>1.2</version>
   	</dependency>
+  	<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+<dependency>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+    <version>5.1.45</version>
+</dependency>
+
   </dependencies>
 </project>
